--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ matplotlib==3.4.3
 tabulate
 forex-python
 hugchat
-pytesseract (Need to add tesseract to PATH)
+pytesseract #(Need to add tesseract to PATH)
 PIL
