--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
           pip install pylint
       - name: Run tests
         env:
-          API_TOKEN: '5947713152:AAEVGD660t6d09D34DEQQ9R4ZqGd2X8UFzE' #${{ secrets.API_TOKEN }}
+          API_TOKEN: ${{ secrets.API_TOKEN }}
           CHAT_ID: '1380954428' #${{ secrets.CHAT_ID }}
         run: |
           export PYTHONPATH=src
