--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Run tests
         env:
           API_TOKEN: ${{ secrets.API_TOKEN }}
-          CHAT_ID: '1380954428' #${{ secrets.CHAT_ID }}
+          CHAT_ID: ${{ secrets.CHAT_ID }}
         run: |
           export PYTHONPATH=src
           python -m pytest -v --cov=src/ --cov-report=xml
